--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ body {
 }
 
 
-header {
+.home__header {
   height: 20%;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -130,7 +130,7 @@ header {
 }
 
 
-header .social-media__container {
+.home__header .social-media__container {
   background-color: #40c7a3;
   display: flex;
   justify-content: end;
@@ -138,34 +138,34 @@ header .social-media__container {
   padding-right: 20px;
 }
 
-header .social-media__container a {
+.home__header .social-media__container a {
   padding-right: 4px;
   color: black;
   font-size: var(--st-14);
   text-decoration: none;
 }
 
-header .social-media__container a span {
+.home__header .social-media__container a span {
   color: white;
 }
 
-header nav {
+.home__header nav {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   padding: 0 20px;
 }
 
-header nav .logo a img{
+.home__header nav .logo a img{
   width: 260px;
   height: 100%;
 }
 
-header nav .about-me {
+.home__header nav .about-me {
   justify-self: end;
 }
 
-header nav .about-me a {
+.home__header nav .about-me a {
   color: black;
   font-weight: 500;
   font-size: var(--mt-18);
@@ -220,3 +220,24 @@ header nav .about-me a {
   background-color: #47cfac;
   transform: scale(1.2);
 }
+
+/* Blogs Pages
+
+section h2 {
+  font-size: var(--lt-20);
+}
+
+.article__banner {
+  background-color: #dfe3e9;
+  padding: 20px 40px;
+}
+
+.article--big {
+  display: grid;
+  grid-template-columns: minmax(auto, 1fr) 1fr;
+}
+
+.article--big img {
+  width: 80%;
+  object-fit: contain;
+} */
