--- a/css/main.css
+++ b/css/main.css
@@ -103,9 +103,13 @@
   --mt-18: 1.8rem;
   --lt-20: 2rem;
   --lt-24: 2.4rem;
+  --lt-28: 2.8rem;
+  --lt-30: 3rem;
   --lt-32: 3.2rem;
   --lt-34: 3.4rem;
   --lt-38: 3.8rem;
+
+  --action-color: #40c7a3;
 }
 
 /* Add your own CSS styles below this line */
@@ -131,7 +135,7 @@ body {
 
 
 .home__header .social-media__container {
-  background-color: #40c7a3;
+  background-color: var(--action-color);
   display: flex;
   justify-content: end;
   align-items: center;
@@ -204,7 +208,7 @@ body {
 .home__main a {
   width: 110px;
   height: 50px;
-  background-color: #40c7a3;
+  background-color: var(--action-color);
   font-weight: 700;
   color: black;
   font-size: var(--mt-16);
@@ -221,23 +225,78 @@ body {
   transform: scale(1.2);
 }
 
-/* Blogs Pages
+/* Blogs Pages */
 
 section h2 {
   font-size: var(--lt-20);
+  margin-bottom: 10px;
+}
+
+.button-article {
+  width: 25%;
+  text-align: center;
+  color: black;
+  font-size: var(--st-14);
+  font-weight: 700;
+  padding: 10px 20px;
+  border: 2px solid var(--action-color);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.button-article::after {
+  content: 'Leer más';
 }
 
 .article__banner {
   background-color: #dfe3e9;
-  padding: 20px 40px;
+  padding: 30px 40px 0;
 }
 
 .article--big {
   display: grid;
-  grid-template-columns: minmax(auto, 1fr) 1fr;
+  grid-template-columns: 3fr 2fr;
 }
 
+
 .article--big img {
-  width: 80%;
-  object-fit: contain;
+  width: 90%;
+  height: 90%;
+  aspect-ratio: 2500/1500;
+  object-fit: cover;
+}
+
+.article--big div {
+  display: flex;
+  flex-direction: column;
+  padding: 28px 0;
+  gap: 30px;
+}
+
+.article--big div h3 {
+  font-size: var(--lt-24);  
+}
+
+.article--big div p {
+  font-size: var(--st-14);
+  font-weight: 500;
+  width: 70%;
+}
+
+.article__container {
+  display: none;
+}
+
+/* .article__container > header {
+  padding: 30px 50px;
+}
+
+.article__container header h2 {
+  font-size: var(--lt-30);
+  text-align: center;
+  border-bottom: 1px solid #dfe3e9;
 } */
+
+footer {
+  display: none;
+}
