--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,10 @@ body {
   font-family:  'Roboto Mono', monospace;
 }
 
+.body__blogpage {
+  width: auto;
+  height: auto;
+}
 
 .home__header {
   height: 20%;
@@ -233,7 +237,7 @@ section h2 {
 }
 
 .button-article {
-  width: 25%;
+  width: 120px;
   text-align: center;
   color: black;
   font-size: var(--st-14);
@@ -246,6 +250,12 @@ section h2 {
 
 .button-article::after {
   content: 'Leer más';
+}
+
+.button-article:hover {
+  background-color: var(--action-color);
+  color: white;
+  transition: 0.3s;
 }
 
 .article__banner {
@@ -283,20 +293,54 @@ section h2 {
   width: 70%;
 }
 
-.article__container {
-  display: none;
-}
-
-/* .article__container > header {
-  padding: 30px 50px;
+.article__container > header {
+  padding: 20px 50px;
 }
 
 .article__container header h2 {
   font-size: var(--lt-30);
   text-align: center;
   border-bottom: 1px solid #dfe3e9;
-} */
+}
+
+.article__container .article__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 0 50px 50px;
+}
+
+.article__container .article__grid .article--small {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 30px;
+}
+
+.article__container .article__grid .article--small h3 {
+  font-size: var(--lt-24);
+}
+
+.article__container .article__grid .article--small p {
+  font-size: var(--st-14);
+  font-weight: 500;
+}
+
+.article__container .article__grid .article--small img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 2500/1500;
+  object-fit: cover;
+}
 
 footer {
-  display: none;
+  background-color: #24232a;
+  height: 120px;
+  border-top: 46px solid var(--action-color);
+  text-align: center;
+  align-content: center;
+}
+
+footer p {
+  color: aliceblue;
+  font-size: var(--st-14);
 }
