--- a/css/main.css
+++ b/css/main.css
@@ -306,8 +306,8 @@ section h2 {
 .article__container .article__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 0 50px 50px;
+  gap: 40px 20px;
+  padding: 0 80px 50px;
 }
 
 .article__container .article__grid .article--small {
@@ -328,6 +328,7 @@ section h2 {
 .article__container .article__grid .article--small img {
   width: 100%;
   height: 100%;
+  max-width: 550px;
   aspect-ratio: 2500/1500;
   object-fit: cover;
 }
