--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,17 @@
   --mt-16: 1.6rem;
   --mt-18: 1.8rem;
   --lt-20: 2rem;
+  --lt-22: 2.2rem;
   --lt-24: 2.4rem;
+  --lt-26: 2.6rem;
   --lt-28: 2.8rem;
   --lt-30: 3rem;
   --lt-32: 3.2rem;
   --lt-34: 3.4rem;
   --lt-38: 3.8rem;
+  --lt-40: 4rem;
+  --lt-42: 4.2rem;
+  --lt-50: 5rem;
 
   --action-color: #40c7a3;
 }
@@ -227,6 +232,7 @@ body {
 .home__main a:hover {
   background-color: #47cfac;
   transform: scale(1.2);
+  transition: 0.3s;
 }
 
 /* Blogs Pages */
@@ -291,7 +297,7 @@ section h2 {
 .article--big div p {
   font-size: var(--st-14);
   font-weight: 500;
-  width: 70%;
+  width: fit-content;
 }
 
 .article__container > header {
