--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/assets/fonts/roboto-latin-400-normal.woff2) format('woff2'), url(/assets/fonts/roboto-latin-400-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-latin-400-normal.woff2) format('woff2'), url(./assets/fonts/roboto-latin-400-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -14,7 +14,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: url(/assets/fonts/roboto-latin-500-normal.woff2) format('woff2'), url(/assets/fonts/roboto-latin-500-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-latin-500-normal.woff2) format('woff2'), url(./assets/fonts/roboto-latin-500-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -24,7 +24,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/assets/fonts/roboto-latin-700-normal.woff2) format('woff2'), url(/assets/fonts/roboto-latin-700-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-latin-700-normal.woff2) format('woff2'), url(./assets/fonts/roboto-latin-700-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -34,7 +34,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 900;
-  src: url(/assets/fonts/roboto-latin-900-normal.woff2) format('woff2'), url(/assets/fonts/roboto-latin-900-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-latin-900-normal.woff2) format('woff2'), url(./assets/fonts/roboto-latin-900-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -44,7 +44,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/assets/fonts/roboto-mono-latin-400-normal.woff2) format('woff2'), url(/assets/fonts/roboto-mono-latin-400-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-mono-latin-400-normal.woff2) format('woff2'), url(./assets/fonts/roboto-mono-latin-400-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -54,7 +54,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: url(/assets/fonts/roboto-mono-latin-500-normal.woff2) format('woff2'), url(/assets/fonts/roboto-mono-latin-500-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-mono-latin-500-normal.woff2) format('woff2'), url(./assets/fonts/roboto-mono-latin-500-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -64,7 +64,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/assets/fonts/roboto-mono-latin-700-normal.woff2) format('woff2'), url(/assets/fonts/roboto-slab-latin-400-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-mono-latin-700-normal.woff2) format('woff2'), url(./assets/fonts/roboto-slab-latin-400-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -74,7 +74,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/assets/fonts/roboto-slab-latin-400-normal.woff2) format('woff2'), url(/assets/fonts/roboto-slab-latin-400-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-slab-latin-400-normal.woff2) format('woff2'), url(./assets/fonts/roboto-slab-latin-400-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -84,7 +84,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/assets/fonts/roboto-slab-latin-700-normal.woff2) format('woff2'), url(/assets/fonts/roboto-slab-latin-700-normal.woff) format('woff');
+  src: url(./assets/fonts/roboto-slab-latin-700-normal.woff2) format('woff2'), url(./assets/fonts/roboto-slab-latin-700-normal.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
